--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,13 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "paths": {
+      "gc-web-components": [
+        "dist/gc-web-components/gc-web-components",
+        "dist/gc-web-components"
+      ]
+    }
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
